tests/reference/tokens-paren4-5c2fc32.stderr
tokenizer error: Parentheses was never closed
 --> tests/tokens/errors/paren4.py:6:1
  |
6 | 
  | ^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
